# signicat_py

./: .gitignore  .sdk.json  README.md  pyproject.toml  sdk-config.yml
.github/workflows/: publish.yml  run-tests.yml
signicat_dem_py/: README.md  __init__.py  client.py  environment.py
signicat_dem_py/core/: __init__.py  api_error.py  auth.py  base_client.py  binary_response.py  query.py  request.py  response.py  type_utils.py  utils.py
signicat_dem_py/resources/dem/: README.md  __init__.py  client.py
signicat_dem_py/resources/sign/: README.md  __init__.py  client.py
signicat_dem_py/types/models/: __init__.py  collection_output.py  document.py  document_collection.py  document_hash.py  document_reference.py  identity_provider.py  link.py  links.py  paginated_signing_session_response.py  post_document_response.py  pre_authentication.py  record_relation_response.py  record_response.py  redirect_settings.py  session_document.py  session_lifecycle.py  session_output.py  session_package.py  session_signature.py  signer.py  signing_session.py  signing_setup.py  signing_setup_additional_parameters.py  stats.py  system_metadata.py  ui.py
signicat_dem_py/types/params/: __init__.py  batch_update_ttl_request.py  collection_output.py  document_collection.py  document_hash.py  document_reference.py  identity_provider.py  pre_authentication.py  query_condition.py  query_request_body.py  record_request.py  redirect_settings.py  session_document.py  session_lifecycle.py  session_output.py  session_package.py  signer.py  ui.py  (+6 more)
tests/: test_dem_client.py  test_sign_client.py
