[tool.poetry]
name = "signicat_dem_py"
version = "0.1.0"
description = ""
readme = "README.md"
authors = []
packages = [{ include = "signicat_dem_py" }]

[tool.poetry.dependencies]
python = "^3.8"
httpx = ">=0.26.0, <1"
pydantic = "^2.5.0"
typing_extensions = "^4.0.0"
jsonpointer = "^3.0.0"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
