[tool.poetry]
name = "signicat_dem_py"
version = "0.1.1"
description = ""
readme = "README.md"
authors = []
packages = [{ include = "signicat_dem_py" }]

[tool.poetry.dependencies]
python = "^3.8"
make-api-request = "^0.1.3"

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.23.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
